Fixed average bar text being too big and not scaling.

--- a/css/style.scss
+++ b/css/style.scss
@@ -117,14 +117,17 @@ body{
 			    position: absolute; 
 			    height: 100%;
 			    border-right: 0.5vmin dashed #888;
-			    margin: 0 3vmin 3vmin 50vw;
+			    margin: 0 0 0 53vw;
 	    		&:after{
 			      content: "Average: 14 Beers";
 			      position: absolute; 
-			      bottom: 0px; 
+			      text-align: center;
+			      width: 15vmin;
+			      bottom: -5vmin; 
 			      right: -0.5vmin;
+			      font-size: 3vmin;
 			      background-color: #888; color: #FFF;
-			      padding: 4px 8px 4px 8px;
+			      padding: 0.5vmin;
 				}
 			}
 			.bar-wrap {
